--- a/packages/mosaic/core/visual/_panel-theme.scss
+++ b/packages/mosaic/core/visual/_panel-theme.scss
@@ -1,12 +1,15 @@
-@import '../../design-tokens/index';
 @import '../theming/theming';
 
 
 @mixin mc-panel-theme($theme) {
+    $background: map-get($theme, background);
+
+    $second: map-get($theme, second);
+
     $is-dark: map-get($theme, is-dark);
 
     .mc-panel {
         background-color: map-get($background, background);
-        border: 1px solid map-get($color-second-palette, if($is-dark, 700, 60));
+        border: 1px solid mc-color($second, if($is-dark, 700, 60));
     }
 }
